updated makefile to use extern function from asm

--- a/euron/makefile
+++ b/euron/makefile
@@ -1,5 +1,8 @@
-euron: euronmain.c euron.o
-	gcc -o euron euronmain.c euron.o -pthread
+euron: euronmain.c euron.o functions.o
+	gcc -o euron euronmain.c euron.o functions.o -pthread
 
 %.o: %.asm
 	nasm -DN=XXX -f elf64 -F dwarf -g $<
+
+%.o: %.c
+	gcc -c  $< -o $@
