added synchronization with spinlock

--- a/euron/makefile
+++ b/euron/makefile
@@ -1,8 +1,8 @@
 euron: euronmain.c euron.o functions.o
-	gcc -o euron euronmain.c euron.o functions.o -pthread
+	gcc -o euron euronmain.c euron.o functions.o -no-pie -pthread
 
 %.o: %.asm
-	nasm -DN=XXX -f elf64 -F dwarf -g $<
+	nasm -DN=2 -f elf64 -F dwarf -g $<
 
 %.o: %.c
 	gcc -c  $< -o $@
